<resources>
    <string name="app_name" translatable="false">HowAreYou</string>
    <string name="very_happy_smile_desc">Very happy smile</string>
    <string name="happy_smile_desc">Happy smile</string>
    <string name="low_smile_desc">Low smile</string>
    <string name="none_smile_desc">None smile</string>
    <string name="sad_smile_desc">Sad smile</string>
    <string name="smile">Smile</string>
    <string name="button_for_add_new_day">button for add new day</string>
    <string name="transition_name" translatable="false">transition_name_unique</string>
    <string name="transition_name_for_fav" translatable="false">transition_name_favorite</string>
    <string name="transition_name_for_cats" translatable="false">transition_name_cats</string>
    <string name="transition_name_for_sign_in" translatable="false">transition_name_sign_in</string>
    <string name="transition_name_for_sign_in_methods" translatable="false">transition_name_sign_in_methods</string>
    <string name="transition_name_for_sum" translatable="false">transition_name_sum</string>
    <string name="transition_name_item" translatable="false">transition_name_unique_%1$s</string>
    <string name="delete">Delete</string>
    <string name="favorite">Add to favorite</string>
    <string name="add">Add</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="help_for_you">Help for you</string>
    <string name="cats">Lovely cats</string>
    <string name="day_customization">Design customization</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="mental_tips">Mental tips</string>
    <string name="login_methods">Sign in methods</string>
    <string name="current_time_tips">Current time</string>
    <string name="family_tips">Family</string>
    <string name="relationship_tips">Relationship</string>
    <string name="friends_tips">Friends</string>
    <string name="login">Sign in</string>
    <string name="register">Sign up</string>
    <string name="register_google_title">Register with Google</string>
    <string name="login_google_title">Login with Google</string>
    <string name="quotes_title">Quote of the day</string>
    <string name="filter_title">Filter</string>
    <string name="current_month_title">Month</string>
    <string name="last_week_title">Week</string>
    <string name="all_days_title">All days</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="nickname">Nickname</string>
    <string name="sign_up">Sign up</string>
    <string name="don_have_acc">Don\'t have account? Sign Up</string>
    <string name="login_progress_name">Great day today…</string>
    <string name="reset_password_hint">Forgot password?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_plug">Enter email from your account. Tap on button below and an email with instructions for resetting your password will be sent to your email address.</string>
    <string name="email_reset_successful">Successful. Check your mail please</string>
    <string name="empty_fields">Please fill the fields</string>
    <string name="empty_password">Please enter your password</string>
    <string name="passwords_error">Passwords don\'t match</string>
    <string name="password_invalid">Wrong password</string>
    <string name="dialog_delete_title">Delete day</string>
    <string name="dialog_delete_desc">Deleting permanently this day?</string>
    <string name="dialog_warning_title">How are you</string>
    <string name="dialog_warning_desc">We have noticed a drop in your mood in the last 5 days, are you all right?</string>
    <string name="dialog_warning_positive">Yes</string>
    <string name="dialog_warning_neutral">Don\'t show again</string>
    <string name="dialog_warning_negative">No</string>
    <string name="dialog_sign_out_title">Sign out</string>
    <string name="dialog_sign_out_positive">Sign out</string>
    <string name="dialog_sign_out_negative">Cancel</string>
    <string name="dialog_delete_local_data_title">Day entries</string>
    <string name="dialog_reauth_title">Re-authenticate</string>
    <string name="dialog_reauth_desc">"To delete your account, you will need to reauthenticate.\nIf you signed up with a Google account, your HowAreYou account will be immediately deleted after re-authentication.\nThis action is not reversible! "</string>
    <string name="dialog_reauth_positive">OK</string>
    <string name="dialog_delete_local_data_positive">Yes</string>
    <string name="dialog_delete_local_data_negative">No</string>
    <string name="dialog_delete_local_data_neutral">Stay logged in</string>
    <string name="yes">Delete</string>
    <string name="dialog_no">Cancel</string>
    <string name="biometric_auth_title">Log in to the HowAreYou</string>
    <string name="biometric_auth_desc">Lets verify you finger</string>
    <string name="biometric_auth_negative_btn">Cancel</string>
    <string name="login_email">Sign in with email</string>
    <string name="login_google">Sign in with Google</string>
    <string name="privacy_policy_info_start">When you sign in or register, you agree to</string>
    <string name="privacy_policy_info_end">The privacy policy</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="desc_you_day">Describe your day in a nutshell</string>
    <string name="how_you_mention">How are you feeling?</string>
    <string name="too_many_chars_100">Cannot be more than 100 characters</string>
    <string name="getCats">Update cute cats!</string>
    <string name="title_cats">What could be better than cats?</string>
    <string name="saved_complete_cats">Cat\'s image is saved!</string>
    <string name="saved_error_cats">This image can\'t be saved</string>
    <string name="permission_denied_cats">To save the cat, please grant the permission</string>
    <string name="cats_no_internet">I got lost…</string>
    <string name="animal_choose_source">Choose source</string>
    <string name="animal_choose_desc">Photos will be uploaded from the selected source</string>
    <string name="animal_choose_pos">Save</string>
    <string name="animal_choose_neg">Cancel</string>
    <string name="photos_by">Photos by</string>
    <string name="delete_data">Delete day entries</string>
    <string name="settings_acc_info">Account</string>
    <string name="settings_acc_manage">Management</string>
    <string name="dialog_delete_data_title">Delete data</string>
    <string name="dialog_delete_data_desc">Confirm data delete.\nYour recorded days will be deleted on the server and on the device! \nIf you want to delete data only on the server, use delete account</string>
    <string name="dialog_delete_data_positive">Delete records</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign out</string>
    <string name="default_error">Something went wrong</string>
    <string name="delete_data_success">Your entries have been successfully deleted</string>
    <string name="delete_acc_success">Your account was successfully deleted</string>
    <string name="reauth_password_title">Your password</string>
    <string name="reauth_password_desc">"Enter your password and the account with all your data will be deleted.\nThis action is not reversible! "</string>
    <string name="reauth_password_positive">Delete account</string>
    <string name="settings_privacy_text">Privacy</string>
    <string name="settings_general_text">General</string>
    <string name="sign_in_advice">For a better experience sign in</string>
    <string name="how_are_you_text">How are you? We hope you all right</string>
    <string name="hello_user">Hello,</string>
    <string name="hello_user_plug">Hello, user</string>
    <string name="sign_in">Sign in</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_day_customization">Design customization</string>
    <string name="account_settings">Manage account</string>
    <string name="settings_sign_in_title">Registration</string>
    <string name="settings_sign_in_desc">After registration, your days will be stored on a secure server and you can use our app on any other device without fear of data loss!\nWe will store only your nickname and days, in a secure encrypted form!</string>
    <string name="create_a_pin_code">Create PIN code</string>
    <string name="show_worried_dialog_title">Worried dialog</string>
    <string name="show_worried_dialog_desc">Show dialog if mood drop have been noticed in the last 5 days</string>
    <string name="enable_biometric_authentication">Enable biometric authentication</string>
    <string name="enable_biometric_authentication_desc">Use biometrics to login to the app</string>
    <string name="enable_pin_code">Enable PIN code</string>
    <string name="enable_pin_code_desc">Use a pin to login to the app</string>
    <string name="pin_code_create_success">PIN code set successfully</string>
    <string name="pin_code_delete_success">PIN code delete</string>
    <string name="biom_auth_create_success">Biometrics set successfully</string>
    <string name="biometric_unknown_error">Unknown error</string>
    <string name="biometric_none_enroll">First, set the biometrics in the device settings</string>
    <string name="snack_bar_warning_negative">Pay attention to the cards above, we hope this will help you at least a little.</string>
    <string name="enter_a_pin">Enter PIN code</string>
    <string name="clear_pin">Clear</string>
    <string name="wrong_pin_code">Wrong PIN</string>
    <string name="favorites_hint">Add your first favorite day and come back!</string>
    <string name="about_day">About past day</string>
    <string name="day_edit_text">What\'s new?</string>
    <string name="day_edit">Edit</string>
    <string name="help_for_you_title_card">Sometimes life\'s problems unsettle us and cause complete confusion, so we recommend turning to the help of others. A consultation with a specialist will help you overcome a difficult period.</string>
    <string name="helplines">Helplines</string>
    <string name="telegram_chat">Telegram chat</string>
    <string name="email_chat">Email chat</string>
    <string name="email_client_not_found">Email client not found</string>
    <string name="telegram_not_found">Telegram not found</string>
    <string name="choose_title">Choose an Email client</string>
    <string name="country">Country</string>
    <string name="notSupportedCountry">Not found in supported countries</string>
    <string name="helpline_phone">Phone</string>
    <string name="helpline_website">Website</string>
    <string name="all_days_desc">Show all days</string>
    <string name="month_days_desc">Show days of this current month</string>
    <string name="week_days_desc">Show days of this current week</string>
    <string name="start_date_field">Start date</string>
    <string name="end_date_field">End date</string>
    <string name="show_selected_days">Show selected days</string>
    <string name="select_days">Select days</string>
    <string name="ok">OK</string>
    <string name="calendar_week">Week</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="close_filter">Close filter</string>
    <string name="no_days_all">Add your first day and come back!</string>
    <string name="no_days_week">There are no entries for this week, let\'s fix it!</string>
    <string name="no_days_month">There are no entries for the current month, let\'s fix it!</string>
    <string name="no_days_filter">There are no entries for the selected dates</string>
    <string name="datePicker_confirm">Confirm</string>
</resources>