<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/summaryFragment"
            android:title="@string/summary"
            android:icon="@drawable/ic_summary"
            android:orderInCategory="1" />

    <item
            android:id="@+id/titleFragment"
            android:title="@string/add"
            android:icon="@drawable/ic_add_new"
            android:orderInCategory="2" />

    <item
            android:id="@+id/historyFragment"
            android:title="@string/history"
            android:icon="@drawable/ic_history"
            android:orderInCategory="3" />


    <item
            android:id="@+id/settingsFragment"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"
            android:orderInCategory="4" />
</menu>