<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true"
        android:transitionName="@string/transition_name_for_sign_in_methods"
        tools:theme="@style/Theme.ZeroApp">


    <ImageView
            android:id="@+id/entry_icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="@dimen/margin_high" />

    <Button
            android:id="@+id/button_email_method"
            android:transitionName="@string/transition_name_for_sign_in"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_high"
            android:layout_marginStart="@dimen/margin_high"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_high"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login_email"
            app:icon="@drawable/ic_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/entry_icon_app" />

    <Button
            android:id="@+id/button_google_method"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_high"
            android:layout_marginStart="@dimen/margin_high"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/login_google"
            app:icon="@drawable/ic_google"
            app:iconTint="@color/black_low"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/black_low"
            app:strokeWidth="1dp"
            android:textColor="@color/black_low"
            app:layout_constraintTop_toBottomOf="@+id/button_email_method" />

</androidx.constraintlayout.widget.ConstraintLayout>