<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:theme="@style/Theme.ZeroApp"
        android:transitionName="@string/transition_name_for_sign_in">


    <ImageView
            android:id="@+id/entry_icon_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="@dimen/margin_normal" />

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_high_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintTop_toBottomOf="@+id/entry_icon_app">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_less" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_text"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_less" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/reset_password_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_hint"
            android:textSize="@dimen/textSize_small_ultra"
            android:layout_marginEnd="@dimen/margin_normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            app:layout_constraintVertical_bias="0.05" />

    <Button
            android:id="@+id/button_signIn"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_high"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/sign_in"
            app:layout_constraintTop_toBottomOf="@+id/reset_password_hint" />

    <TextView
            android:id="@+id/sign_up_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_have_acc"
            android:textSize="@dimen/textSize_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>