<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:theme="@style/Theme.ZeroApp"
        tools:context=".presentation.add_day.AddDayFragment"
        android:transitionName="@string/transition_name_for_sum"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/how_are_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_high_two"
            android:text="@string/how_are_you_today"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.15"
            android:textSize="@dimen/textSize_big_1"
            android:textColor="@color/black"
            android:fontFamily="@font/playfair_display" />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textDescribeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_you_day"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_high"
            app:layout_constraintTop_toBottomOf="@+id/how_are_you"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textDescribeDay"
                android:maxLength="100"
                android:maxLines="7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/gray_less" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:id="@+id/b_happySmile"
            android:src="@drawable/smile_happy"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,DuplicateSpeakableTextCheck"
            android:minHeight="@dimen/button_height"
            android:contentDescription="@string/happy_smile_desc"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/b_smile_low"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/b_very_happy"
            app:layout_constraintTop_toTopOf="@+id/b_sad"
            app:layout_constraintBottom_toBottomOf="@+id/b_sad"
            app:layout_constraintVertical_bias="0.731" />

    <ImageButton
            android:id="@+id/b_sad"
            android:src="@drawable/smile_sad"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck"
            android:minHeight="@dimen/button_height"
            android:contentDescription="@string/sad_smile_desc"
            android:background="@color/white"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/b_none"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.707" />

    <ImageButton
            android:id="@+id/b_very_happy"
            android:src="@drawable/smile_very_happy"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck"
            android:minHeight="@dimen/button_height"
            android:contentDescription="@string/very_happy_smile_desc"
            android:background="@color/white"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toEndOf="@+id/b_happySmile"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/b_sad"
            app:layout_constraintBottom_toBottomOf="@+id/b_sad"
            app:layout_constraintVertical_bias="0.729" />

    <ImageButton
            android:id="@+id/b_smile_low"
            android:src="@drawable/smile_low"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck"
            android:minHeight="@dimen/button_height"
            android:contentDescription="@string/sad_smile_desc"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/b_none"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/b_happySmile"
            app:layout_constraintTop_toTopOf="@+id/b_sad"
            app:layout_constraintBottom_toBottomOf="@+id/b_sad"
            app:layout_constraintVertical_bias="0.731" />

    <ImageButton
            android:id="@+id/b_none"
            android:src="@drawable/smile_none"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck"
            android:minHeight="@dimen/button_height"
            android:contentDescription="@string/sad_smile_desc"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/b_sad"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/b_smile_low"
            app:layout_constraintTop_toTopOf="@+id/b_sad"
            app:layout_constraintBottom_toBottomOf="@+id/b_sad"
            app:layout_constraintVertical_bias="0.731" />

</androidx.constraintlayout.widget.ConstraintLayout>